--- a/package.json
+++ b/package.json
@@ -23,20 +23,24 @@
     "@types/swagger-ui-express": "^4.1.6",
     "@types/winston": "^2.4.4",
     "@types/yamljs": "^0.2.34",
+    "ts-jest": "^29.1.2",
     "tsc-watch": "^6.2.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.4.5"
   },
   "dependencies": {
     "@apollo/server": "^4.9.5",
+    "@types/jest": "^29.5.12",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-openapi-validator": "^5.1.2",
     "express-winston": "^4.2.0",
+    "googleapis": "^135.0.0",
     "graphql": "^16.8.1",
     "helmet": "^7.1.0",
+    "jest": "^29.7.0",
     "mongoose": "^8.0.3",
     "nodemon": "^3.1.0",
     "proj4": "^2.9.2",
